--- a/Expresso/templates/trial_prediction.html
+++ b/Expresso/templates/trial_prediction.html
@@ -21,8 +21,8 @@
                     {{form.montant.label()}}
                     {{form.montant(class="form-control", placeholder="")}}
                     <br>
-                    {{form.frequency_rech.label()}}
-                    {{form.frequency_rech(class="form-control", placeholder="")}}
+                    {{form.frequence_rech.label()}}
+                    {{form.frequence_rech(class="form-control", placeholder="")}}
                     <br>
                     {{form.revenue.label()}}
                     {{form.revenue(class="form-control", placeholder="User revenue")}}
@@ -32,8 +32,8 @@
                     {{form.arpu_segment.label()}}
                     {{form.arpu_segment(class="form-control", placeholder="Revenue/90 days")}}
                     <br>
-                    {{form.frequency.label()}}
-                    {{form.frequency(class="form-control", placeholder="")}}
+                    {{form.frequence.label()}}
+                    {{form.frequence(class="form-control", placeholder="")}}
                     <br>
                     {{form.data_volume.label()}}
                     {{form.data_volume(class="form-control", placeholder="Data Volume ")}}
@@ -69,13 +69,10 @@
                 </div>
             
                 <div class="col-3 prediction_col start_middle" >
-                    <div>
-                        {{form.user_predict(class="btn user_form_btn btn-secondary")}}
-                        <br><br>
-                    
-                        <h4 class="btn user_form_btn btn-secondary">Likelyhood of churn</h4>
-                            {{prediction}}
-                    </div>
+                    {{form.user_predict(class="btn user_form_btn btn-secondary")}}
+                        
+                    <h4 class="btn user_form_btn btn-secondary">Likelyhood of churn</h4>
+                        {{prediction}}
                 </div>
             
             </div>
