--- a/Expresso/templates/home.html
+++ b/Expresso/templates/home.html
@@ -4,7 +4,7 @@
 
 {%block content%}
     <div class="container-login100" >
-        <img src="static/images/pic3.jpeg" style="width: 100%; height:100%;"/>
+        <img src="static/images/home.jpg" style="width: 100%; height:100%;"/>
     </div>
 
 
