--- a/Expresso/templates/trial_prediction.html
+++ b/Expresso/templates/trial_prediction.html
@@ -71,9 +71,8 @@
                 <div class="prediction_col start_middle" >
                     {{form.user_predict(id="get_prediction", class="btn user_form_btn btn-secondary")}}
                     
-                    <div id ="prediction_div" style="display:none">
-                        <div aria-hidden="true"><i>Likelyhood of churn : </i>{{prediction}}</div>
-                        {{form.add_prediction(class="btn user_form_btn btn-secondary")}}
+                    <div id ="prediction_div">
+                        <div><i>Likelyhood of churn : </i>{{prediction}}</div>
                     </div>
                     
                 </div>
