--- a/Expresso/templates/UserInfo.html
+++ b/Expresso/templates/UserInfo.html
@@ -74,8 +74,8 @@
                     <br>
                     {{form.user_predict(id="get_prediction", class="btn user_form_btn btn-secondary")}}
                     
-                    <div id ="prediction_div" style="display:none">
-                        <div aria-hidden="true"><i>Likelyhood of churn : </i>{{prediction}}</div>
+                    <div id ="prediction_div">
+                        <div><i>Likelyhood of churn : </i>{{prediction}}</div>
                         {{form.add_prediction(class="btn user_form_btn btn-secondary")}}
                     </div>
                     
