--- a/Expresso/templates/home.html
+++ b/Expresso/templates/home.html
@@ -3,8 +3,32 @@
 
 {%block content%}
     <div class="container-login100" >
-        <img src="static/images/home.jpg" style="width: 100%; height:100%;"/>
+        <!--img src="static/images/home.jpg" style="width: 100%; height:100%;"/-->
+        <div class="row">
+            <br><br><br>
+            
+            <p><h1>Welcome</h1></p>
+            <br><br>
+            <p><h1> to</h1> </p>
+            <br><br>
+            <p><h1> Expresso</h1></p>
+            <br><br><br>
+
+            <div>
+                <a class="btn login100-form-btn" href="{{url_for('login_page')}}">Login</a>
+                <br>
+                <a class="btn login100-form-btn" href="{{url_for('reg_access_page')}}">Create Account</a>
+            </div>
+
+            <br><br><br>
+            
+        </div>
     </div>
 
+<style>
+    .row{
+        flex-direction:column;
+    }
+</style>
 
 {%endblock%}
